--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "- [Consignes du projet](#consignes-du-projet)\r   - [Description](#description)\r   - [Schéma de base de donnée](#schéma-de-base-de-donnée)\r     - [Bars](#bars)\r     - [Biere](#biere)\r     - [Biere_Commande (table de liaison)](#biere_commande-table-de-liaison)\r     - [Commande](#commande)\r   - [Liste des endpoints](#liste-des-endpoints)\r     - [Bars](#bars-1)\r     - [Biere](#biere-1)\r     - [Commande](#commande-1)\r     - [Biere_commande](#biere_commande)\r   - [Liste des endpoints avancés](#liste-des-endpoints-avancés)\r   - [Liste des fichiers recommandés](#liste-des-fichiers-recommandés)\r   - [Liste des modules à installer (recommendation)](#liste-des-modules-à-installer-recommendation)\r   - [Liste des contraintes sur mes routes et models :](#liste-des-contraintes-sur-mes-routes-et-models-)\r   - [BONUS 1](#bonus-1)\r   - [BONUS 2](#bonus-2)\r   - [BONUS 3](#bonus-3)",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
