--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "lint": "eslint --fix",
+    "lint": "eslint --fix . --config .eslintrc.js",
+    "format": "prettier --write .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -26,6 +27,6 @@
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.0.0",
     "nodemon": "^3.1.0",
-    "prettier": "^3.2.5"
+    "prettier": "3.2.5"
   }
 }
