Refactor Prettier configuration, update models and routes, and fix import typo in biereRouter.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,22 @@
 {
-  "editor.formatOnSave": true,
-  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
-  "prettier.configPath": "",
-  "editor.formatOnPaste": true,
-  "prettier.useEditorConfig": false,
-  "eslint.run": "onSave",
-  "eslint.format.enable": true,
-  "eslint.codeActionsOnSave.rules": null
+	"editor.formatOnSave": true,
+	"editor.defaultFormatter": "esbenp.prettier-vscode",
+	"prettier.configPath": "",
+	"prettier.requireConfig": true,
+	"prettier.semi": true,
+	"eslint.experimental.useFlatConfig": false,
+	"editor.formatOnPaste": true,
+	"prettier.useEditorConfig": false,
+	"eslint.run": "onSave",
+	"eslint.format.enable": true,
+	"eslint.codeActionsOnSave.rules": null,
+	"eslint.codeActionsOnSave.mode": "all",
+	"[jsonc]": {
+		"editor.defaultFormatter": "vscode.json-language-features"
+	},
+	"[javascript]": {
+		"editor.maxTokenizationLineLength": 2500,
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"prettier.useTabs": true
 }
