--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,7 @@
 {
-	"trailingComma": "none",
-	"semi": true,
-	"printWidth": 120,
-	"tabWidth": 2,
-	"useTabs": true
+    "trailingComma": "none",
+    "semi": true,
+    "printWidth": 120,
+    "tabWidth": 4,
+    "bracketSpacing": true
 }
