--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "dev": "nodemon index.js",
-        "lint": "eslint --fix",
+        "lint": "eslint --fix ./**/*.js",
         "format": "prettier --write .",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
