--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
         "globals": "^15.0.0",
+        "jest": "^29.7.0",
         "nodemon": "^3.1.0",
-        "prettier": "3.2.5"
+        "prettier": "3.2.5",
+        "supertest": "^6.3.4"
     }
 }
