--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "dev": "nodemon server.js",
         "lint": "eslint --fix ./**/*.js",
         "format": "prettier --write .",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest  tests/*.test.js"
     },
     "author": "Par: Elkoura, Kiki, Mickael, et Thomas",
     "license": "ISC",
