--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "keywords": [],
     "devDependencies": {
         "@eslint/js": "^9.1.1",
+        "babel-cli": "^6.26.0",
+        "babel-preset-env": "^1.7.0",
         "eslint": "^9.1.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
@@ -30,6 +32,7 @@
         "jest": "^29.7.0",
         "nodemon": "^3.1.0",
         "prettier": "3.2.5",
+        "superagent": "^9.0.1",
         "supertest": "^6.3.4"
     }
 }
