--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
         "dev": "nodemon server.js",
         "lint": "eslint --fix ./**/*.js",
         "format": "prettier --write .",
-        "test": "jest --verbose"
+        "test": "jest --runInBand --verbose"
     },
     "author": "Par: Elkoura, Kiki, Mickael, et Thomas",
     "license": "ISC",
+
     "dependencies": {
         "body-parser": "^1.20.2",
         "dotenv": "^16.4.5",
