--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon server.js",
     "lint": "eslint --fix ./**/*.js",
     "format": "prettier --write .",
-    "test": "jest --runInBand --verbose"
+    "test": "jest --runInBand --verbose --coverage"
   },
   "author": "Par: Elkoura, Kiki, Mickael, et Thomas",
   "license": "ISC",
